@startuml
class Person {
        <<Abstract>>
        -String name
        +Person(name)
        +getName() String$
        +doWork()*
    }

    class ICanMarkDelivery {
        <<Interface>>
        +markDelivery()
    }

    class Operator {
        +Operator(name)
        +registerPreInfo()
        +openDelivery()
        +groupOrders()
        +getName() String$
    }

    class Storekeeper {
        +Storekeeper(name)
        +scanGoods()
        +placeGoodsByDate()
        +getName() String$
    }

    class Driver {
        +Driver(name)
        +handoverCargo()
        +getRouteSheet()
        +getName() String$
    }

    class Delivery {
        +Delivery(info)
        +addGoods(item)
        +completeDelivery()$
    }

    class Goods {
        +Goods(barcode, expiry)
        +getInfo()
    }


    Person <|-- Operator
    Person <|-- Storekeeper
    Person <|-- Driver

    Operator ..|> ICanMarkDelivery

    Delivery *-- Goods : складається з

    Storekeeper ..> Delivery : сканує/поміщає
    Driver ..> Delivery : здає


    Operator o-- Delivery : відкриває/групує
@enduml
